# AdaptiveBinaryImageCompression

./: .gitignore  CMakeLists.txt
src/code/: main.cpp
src/code/Algorithms/: BTC.cpp  BWTRLEdecoder.cpp  BWTRLEencoder.cpp
src/code/Utils/: Display.cpp  FileHandler.cpp  Statistics.cpp
src/include/Algorithms/: BTC.hpp  BTWRLEdecoder.hpp  BWTRLEencoder.hpp  BinaryImageCompressor.hpp  BinaryImageDecompressor.hpp
src/include/Utils/: Display.hpp  FileHandler.hpp  Statistics.hpp
